--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Car rental in Ukraine" />
+    <meta name="description" content="Test task abz.agency" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
